# TSP-MAPF

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gtest/: CMakeLists.txt  tests.cpp
latex/: _a_star_8h.tex  _a_star_8h__dep__incl.md5  _a_star_8h__incl.md5  _a_star_8h_source.tex  _agent_8cpp.tex  _agent_8cpp__incl.md5  _agent_8h.tex  _agent_8h__dep__incl.md5  _agent_8h__incl.md5  _agent_8h_source.tex  _astar_8cpp.tex  _astar_8cpp__incl.md5  _base_environment_8cpp.tex  _base_environment_8cpp__incl.md5  _base_environment_8h.tex  _base_environment_8h__dep__incl.md5  _base_environment_8h__incl.md5  _base_environment_8h_source.tex  _c_a___environment_8cpp.tex  _c_a___environment_8cpp__incl.md5  _c_a___environment_8h.tex  _c_a___environment_8h__dep__incl.md5  _c_a___environment_8h__incl.md5  _c_a___environment_8h_source.tex  _cell_8h.tex  _cell_8h__dep__incl.md5  _cell_8h__incl.md5  _cell_8h_source.tex  _cooperative_a_8cpp.tex  _cooperative_a_8cpp__incl.md5  _cooperative_a_8h.tex  _cooperative_a_8h__dep__incl.md5  _cooperative_a_8h__incl.md5  _cooperative_a_8h_source.tex  _graph_8h.tex  _graph_8h__dep__incl.md5  _graph_8h__incl.md5  _graph_8h_source.tex  _node_8cpp.tex  _node_8cpp__incl.md5  (+587 more)
lib/: Agent.h  BaseEnvironment.h  CA_Environment.h  Diagram bez tytułu.drawio  Environment.h  Graph.h  Reserve.h  TSP-MAPD.h  TSP.h  Task.h  TaskGroup.h  WCA_Environment.h  WHCA_Environment.h  const.h  setup.h
lib/AStar/: AStar.h  Node.h
lib/CA/: Cell.h  CooperativeA.h  Reservation.h
lib/Space-Time-AStar/: Cell.h  Reservation.h  SpaceTimeAStar.h
lib/WCA/: WCA_Agent.h  WindowCooperativeA.h
lib/WHCA/: WHCA_Agent.h  whca.h
src/: Agent.cpp  BaseEnvironment.cpp  CA_Environment.cpp  Environment.cpp  TSP.cpp  Task.cpp  TaskGroup.cpp  WCA_Environment.cpp  WHCA_Environment.cpp  setup.cpp
src/AStar/: Astar.cpp  Node.cpp
src/CA/: CooperativeA.cpp
src/Space-Time-AStar/: SpaceTimeAStar.cpp
vis2/: agentinputwidget.cpp  agentinputwidget.h  agentlistitemwidget.cpp  agentlistitemwidget.h  agentrectitem.cpp  agentrectitem.h  animationscene.cpp  animationscene.h  animationview.cpp  animationview.h  borderlayout.cpp  borderlayout.h  default.qrc  editorview.cpp  editorview.h  generalview.cpp  generalview.h  generalview.ui  graphrectitem.h  interactivecellitem.h  interactivegraphrectitem.h  main.cpp  menu.cpp  menu.h  menu.pro  menuItem.cpp  menuItem.h  pointlistitemwidget.cpp  pointlistitemwidget.h  settingsview.cpp  settingsview.h  settingsview.pro  sidebar.cpp  sidebaritem.cpp  sidebaritem.h  taskgroupscene.cpp  taskgroupscene.h  taskinputwidget.cpp  taskinputwidget.h
visualization/: CMakeLists.txt  agentrectitem.cpp  agentrectitem.h  graphrectitem.cpp  graphrectitem.h  main.cpp  main_window_menu.cpp  main_window_menu.h  mapfscene.cpp  mapfscene.h  view.cpp  view.h
visualization_qt/: agentlistitemwidget.h  agentrectitem.cpp  agentrectitem.h  animationscene.cpp  animationview.cpp  animationview.h  editorview.cpp  editorview.h  generalview.h  main.cpp  menu.pro.user.ebbce63  menuItem.cpp  sidebar.cpp  sidebar.h  taskgroupscene.h  taskinputwidget.h
(+24 files in other folders)
